Updated page Cables ElectricalDevice/fr

--- a/wiki/fr/Cables_ElectricalDevice.html
+++ b/wiki/fr/Cables_ElectricalDevice.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables ElectricalDevice/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+ElectricalDevice&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Betriebsmittel (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Betriebsmittel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Cables_ElectricalDevice.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables ElectricalDevice (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="docnav">
@@ -50,12 +50,8 @@
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>Le <span typeof="mw:File"><a href="../index.php?title=Cables_ElectricalDevice.svg&amp;filetimestamp=20251011135447&amp;.html" class="mw-file-description"><img src="../File/Cables_ElectricalDevice.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Dispositif &eacute;lectrique</a> repr&eacute;sente un mod&egrave;le de tout <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Electrical_device">appareil &eacute;lectrique</a> pouvant &ecirc;tre connect&eacute; directement par c&acirc;ble. Sa forme peut &ecirc;tre s&eacute;lectionn&eacute;e dans la liste <a href="#Donn%C3%A9es"><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Preset</b></a> lors de sa cr&eacute;ation. Seul un type de forme non param&eacute;trique est disponible. Il est appel&eacute; &laquo;&nbsp;Fixe&nbsp;&raquo;.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Le type de forme &laquo;&nbsp;Fixe&nbsp;&raquo; cr&eacute;e un objet p&eacute;riph&eacute;rique non param&eacute;trique dont la forme est tir&eacute;e d'un fichier <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Standard_pour_l%27%C3%A9change_de_donn%C3%A9es_de_produit">STEP</a> externe. Plusieurs mod&egrave;les de p&eacute;riph&eacute;riques STEP pr&eacute;d&eacute;finis sont fournis avec l'atelier Cables. De plus, l'utilisateur peut cr&eacute;er sa propre biblioth&egrave;que de p&eacute;riph&eacute;riques, comme d&eacute;crit dans <a href="#Pr%C3%A9r%C3%A9glages_des_dispositifs_%C3%A9lectriques">Pr&eacute;r&eacute;glages des dispositifs &eacute;lectriques</a>. En plus de la forme, un certain nombre de <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">terminaisons</a> sont cr&eacute;&eacute;s avec une taille et une position pr&eacute;d&eacute;finies correspondant aux points de connexion. De plus, un ou plusieurs objets <a href="../fr/Cables_SuppLines.html" title="Cables SuppLines/fr">SuppLines</a> peuvent &ecirc;tre cr&eacute;&eacute;s pour former la base du c&acirc;ble entrant dans le dispositif.
-</p>
-</div>
-<p>Le <b>Dispositif &eacute;lectrique</b> appartient &agrave; la classe <a href="../fr/Arch_Component.html" title="Arch Component/fr">Arch Composant</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s.
+</p><p>Le type de forme &laquo;&nbsp;Fixe&nbsp;&raquo; cr&eacute;e un objet p&eacute;riph&eacute;rique non param&eacute;trique dont la forme est tir&eacute;e d'un fichier <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Standard_pour_l%27%C3%A9change_de_donn%C3%A9es_de_produit">STEP</a> externe. Plusieurs mod&egrave;les de p&eacute;riph&eacute;riques STEP pr&eacute;d&eacute;finis sont fournis avec l'atelier Cables. De plus, l'utilisateur peut cr&eacute;er sa propre biblioth&egrave;que de p&eacute;riph&eacute;riques, comme d&eacute;crit dans <a href="#Pr%C3%A9r%C3%A9glages_des_dispositifs_%C3%A9lectriques">Pr&eacute;r&eacute;glages des dispositifs &eacute;lectriques</a>. En plus de la forme, un certain nombre de <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">terminaisons</a> sont cr&eacute;&eacute;s avec une taille et une position pr&eacute;d&eacute;finies correspondant aux points de connexion. De plus, un ou plusieurs objets <a href="../fr/Cables_SuppLines.html" title="Cables SuppLines/fr">SuppLines</a> peuvent &ecirc;tre cr&eacute;&eacute;s pour former la base du c&acirc;ble entrant dans le dispositif.
+</p><p>Le <b>Dispositif &eacute;lectrique</b> appartient &agrave; la classe <a href="../fr/Arch_Component.html" title="Arch Component/fr">Arch Composant</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s.
 </p><p>L'objet <b>Dispositif &eacute;lectrique</b> peut &ecirc;tre color&eacute; en attribuant le mat&eacute;riau souhait&eacute; <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;tiau</a> &agrave; la propri&eacute;t&eacute; <b>Material</b>. Les <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">multi-mat&eacute;riaux</a> sont &eacute;galement pris en charge. Ils peuvent &ecirc;tre utilis&eacute;s pour modifier les couleurs d'origine du connecteur et les remplacer par celles d&eacute;finies dans la composition multi-mat&eacute;riaux. Important&nbsp;: le nombre de couleurs dans le multi-mat&eacute;riaux doit correspondre au nombre de couleurs d'origine du connecteur.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Cables_ElectricalDevice_Example1.png&amp;filetimestamp=20251016152645&amp;.html" class="mw-file-description"><img src="../File/Cables_ElectricalDevice_Example1.png" decoding="async" width="400" height="400" class="mw-file-element" data-file-width="400" data-file-height="400"></a></span>
 </p>
@@ -199,35 +195,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194835
+Cached time: 20260122111454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 722/1000000
+CPU time usage: 0.078 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 721/1000000
 Post&#8208;expand include size: 11775/2097152 bytes
 Template argument size: 3863/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2127/5000000 bytes
+Unstrip post&#8208;expand size: 2132/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.754      1 -total
- 14.65%    6.556      5 Template:PropertyData
- 13.94%    6.237      1 Template:GuiCommand/fr
- 11.27%    5.043      2 Template:Docnav/fr
- 10.68%    4.779      2 Template:TitleProperty
- 10.25%    4.589      6 Template:Code
-  9.45%    4.230      5 Template:Variable
-  7.02%    3.143      9 Template:Incode
-  6.68%    2.991      2 Template:Value
-  6.10%    2.729      1 Template:Caption
+100.00%   27.586      1 -total
+ 16.55%    4.565      1 Template:GuiCommand/fr
+ 16.38%    4.520      5 Template:PropertyData
+ 12.55%    3.461      6 Template:Code
+ 11.23%    3.097      2 Template:TitleProperty
+ 10.16%    2.803      5 Template:Variable
+  9.21%    2.540      2 Template:Docnav/fr
+  5.92%    1.632      4 Template:KEY
+  5.15%    1.420     11 Template:FileName
+  5.08%    1.401      9 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400454-0!canonical and timestamp 20260118194835 and revision id 1740824. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400454-0!canonical and timestamp 20260122111454 and revision id 1742297. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
