Updated page Cables ElectricalDevice/fr

--- a/wiki/fr/Cables_ElectricalDevice.html
+++ b/wiki/fr/Cables_ElectricalDevice.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables ElectricalDevice/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+ElectricalDevice&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Betriebsmittel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Cables_ElectricalDevice.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables ElectricalDevice (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Cables_CableLightPoint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Cables_CableLightPoint.html" title="Cables CableLightPoint/fr">Source lumineuse</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Cables_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Cables_Material.html" title="Cables Material/fr">Mat&eacute;riau</a>
@@ -169,11 +169,10 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>&nbsp;: une forme externe de tout objet de base bas&eacute; sur <a href="../fr/Part_Workbench.html" title="Part Workbench/fr">Shape</a> peut &ecirc;tre utilis&eacute;e ici. Cela remplacera la m&eacute;thode par d&eacute;faut de cr&eacute;ation de forme et une forme externe sera utilis&eacute;e. Les param&egrave;tres <b>Number Of Terminals</b> et <b>Number Of Supp Lines</b> deviennent visibles et peuvent &ecirc;tre modifi&eacute;s si la propri&eacute;t&eacute; Base n'est pas None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants <a href="../fr/Cables_SuppLines.html" title="Cables SuppLines/fr">SuppLines</a>. La valeur par d&eacute;faut est 0.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">CableTerminal</a>. La valeur par d&eacute;faut est 1.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si cette option est d&eacute;finie sur <code>true</code>, les terminaisons et les lignes suppl&eacute;mentaires li&eacute;es seront consid&eacute;r&eacute;es comme des enfants dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a> (<span style="color:blue;">introduite dans la version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants <a href="../fr/Cables_SuppLines.html" title="Cables SuppLines/fr">SuppLines</a>. La valeur par d&eacute;faut est 0.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants de <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">Terminaison de c&acirc;ble</a>. La valeur par d&eacute;faut est 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: sp&eacute;cifie l'ensemble pr&eacute;d&eacute;fini de param&egrave;tres pour le dispositif &eacute;lectrique. Le pr&eacute;r&eacute;glage par d&eacute;faut est <code>MCB_1-Pole</code>.</li></ul>
-</div>
 <p><span id="Tutorials"></span>
 </p>
 <h2><span class="mw-headline" id="Tutoriels">Tutoriels</span></h2>
@@ -195,35 +194,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260122111454
+Cached time: 20260122111614
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.101 seconds
-Preprocessor visited node count: 721/1000000
-Post&#8208;expand include size: 11775/2097152 bytes
-Template argument size: 3863/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 768/1000000
+Post&#8208;expand include size: 12223/2097152 bytes
+Template argument size: 3923/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2132/5000000 bytes
+Unstrip post&#8208;expand size: 2136/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.586      1 -total
- 16.55%    4.565      1 Template:GuiCommand/fr
- 16.38%    4.520      5 Template:PropertyData
- 12.55%    3.461      6 Template:Code
- 11.23%    3.097      2 Template:TitleProperty
- 10.16%    2.803      5 Template:Variable
-  9.21%    2.540      2 Template:Docnav/fr
-  5.92%    1.632      4 Template:KEY
-  5.15%    1.420     11 Template:FileName
-  5.08%    1.401      9 Template:Incode
+100.00%   37.203      1 -total
+ 15.33%    5.702      6 Template:PropertyData
+ 14.48%    5.387      1 Template:GuiCommand/fr
+ 10.00%    3.719      6 Template:Code
+  9.91%    3.686      6 Template:Variable
+  9.28%    3.454      1 Template:TRUE
+  8.44%    3.139      2 Template:Docnav/fr
+  7.67%    2.854      2 Template:TitleProperty
+  5.63%    2.094      3 Template:MenuCommand
+  5.40%    2.010     10 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400454-0!canonical and timestamp 20260122111454 and revision id 1742297. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400454-0!canonical and timestamp 20260122111614 and revision id 1742299. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
