Updated page Cables CableBox/fr

--- a/wiki/fr/Cables_CableBox.html
+++ b/wiki/fr/Cables_CableBox.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableBox/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableBox&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Cables_CableBox.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Installationsdose (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Cables_CableBox.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Installationsdose (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Cables_CableBox.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableBox (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/Cables_CableBox.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Puszka kablowa (2% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -112,11 +112,10 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Material</b><span style="font-size:80%;"> (<code>Link</code>)</span>&nbsp;: un <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;riau</a> ou un <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">mat&eacute;riau multiple</a> peut &ecirc;tre rattach&eacute; ici. Le sp&eacute;cial mat&eacute;riau multiple pr&eacute;d&eacute;fini <code>boxMultiMat2m</code> est disponible dans <a href="../fr/Cables_Material.html" title="Cables Material/fr">Cables Mat&eacute;riau</a>. Il peut &ecirc;tre utilis&eacute; si des rails DIN sont disponibles dans l'objet Cable Box.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Box Body Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si d&eacute;fini sur <code>true</code>, la forme de la bo&icirc;te est masqu&eacute;e afin de faciliter la modification des c&acirc;bles &agrave; l'int&eacute;rieur d'une bo&icirc;te (avec l'aide &eacute;ventuelle d'anneaux d'aide). Il doit &ecirc;tre d&eacute;fini sur <code>false</code> lorsque la modification des c&acirc;bles est termin&eacute;e ou n'est pas n&eacute;cessaire.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Box Body Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si d&eacute;fini sur <code>TRUE</code>, la forme de la bo&icirc;te est masqu&eacute;e afin de faciliter la modification des c&acirc;bles &agrave; l'int&eacute;rieur d'une bo&icirc;te (avec l'aide &eacute;ventuelle d'anneaux d'aide). Il doit &ecirc;tre d&eacute;fini sur <code>FALSE</code> lorsque la modification des c&acirc;bles est termin&eacute;e ou n'est pas n&eacute;cessaire.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Depth</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la profondeur int&eacute;rieure du bo&icirc;tier. La profondeur par d&eacute;faut est de 74 mm. Disponible si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie le diam&egrave;tre int&eacute;rieur du bo&icirc;tier. Le diam&egrave;tre par d&eacute;faut est de 60 mm. Disponible si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Circle</code>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Din Rails</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si d&eacute;fini sur <code>true</code>, le <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Rail_DIN">rail DIN TH35</a> est automatiquement ajout&eacute; au corps du bo&icirc;tier en fonction de la forme et des dimensions du bo&icirc;tier. Le rail est plac&eacute; 50 mm sous le haut du bo&icirc;tier, la distance entre les rails est d&eacute;finie sur 125 mm. Le bo&icirc;tier de c&acirc;bles doit &ecirc;tre suffisamment grand pour permettre la cr&eacute;ation automatique de rails DIN. La valeur par d&eacute;faut est <code>true</code>. Cr&eacute;&eacute; uniquement si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Din Rails</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si d&eacute;fini sur <code>TRUE</code>, le <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Rail_DIN">rail DIN TH35</a> est automatiquement ajout&eacute; au corps du bo&icirc;tier en fonction de la forme et des dimensions du bo&icirc;tier. Le rail est plac&eacute; 50 mm sous le haut du bo&icirc;tier, la distance entre les rails est d&eacute;finie sur 125 mm. Le bo&icirc;tier de c&acirc;bles doit &ecirc;tre suffisamment grand pour permettre la cr&eacute;ation automatique de rails DIN. La valeur par d&eacute;faut est <code>TRUE</code>. Cr&eacute;&eacute; uniquement si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Fillet Radius</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie le diam&egrave;tre du rayon de cong&eacute; int&eacute;rieur des parois lat&eacute;rales du bo&icirc;tier. Le rayon de cong&eacute; par d&eacute;faut est de 10 mm. Disponible si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la hauteur int&eacute;rieure du bo&icirc;tier. La hauteur par d&eacute;faut est de 62 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Hole Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie le diam&egrave;tre d'un seul trou. Le diam&egrave;tre par d&eacute;faut est de 20 mm.</li>
@@ -124,9 +123,9 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants SuppLines. La valeur par d&eacute;faut est 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: sp&eacute;cifie l'ensemble pr&eacute;d&eacute;fini de param&egrave;tres pour le bo&icirc;tier. Le pr&eacute;r&eacute;glage par d&eacute;faut est <code>1G_FlushMnt_Round_D60_h62</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Profile Type</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: sp&eacute;cifie le type de profil de base pour la forme du bo&icirc;tier. Valeurs disponibles&nbsp;: <code>Circle</code>, <code>Rectangle</code>. Certaines autres propri&eacute;t&eacute;s d&eacute;pendent de celle-ci et sont visibles si n&eacute;cessaire.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Shape Reference Plane</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: plan de r&eacute;f&eacute;rence pour la forme de la bo&icirc;te. Il modifie uniquement la r&eacute;f&eacute;rence interne sans affecter la propri&eacute;t&eacute; Placement de la bo&icirc;te (<span style="color:blue;">introduite dans la version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie l'&eacute;paisseur de la paroi du bo&icirc;tier. L'&eacute;paisseur par d&eacute;faut est de 2 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Width</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la largeur int&eacute;rieure du bo&icirc;tier. La largeur par d&eacute;faut est de 74 mm. Disponible si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box Helpers</span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -170,35 +169,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194743
+Cached time: 20260122111826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.357 seconds
-Preprocessor visited node count: 1612/1000000
-Post&#8208;expand include size: 21288/2097152 bytes
-Template argument size: 4830/2097152 bytes
+CPU time usage: 0.101 seconds
+Real time usage: 0.145 seconds
+Preprocessor visited node count: 1654/1000000
+Post&#8208;expand include size: 21761/2097152 bytes
+Template argument size: 4932/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1355/5000000 bytes
+Unstrip post&#8208;expand size: 1360/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  180.998      1 -total
- 24.92%   45.106     25 Template:PropertyData
- 21.48%   38.877     25 Template:Variable
- 21.25%   38.462      3 Template:FileName
- 20.01%   36.214      3 Template:TitleProperty
-  7.02%   12.701      1 Template:GuiCommand/fr
-  6.71%   12.151     24 Template:Value
-  4.48%    8.106      2 Template:Code
-  4.42%    8.000      2 Template:Docnav/fr
-  4.01%    7.249     45 Template:Incode
+100.00%   50.219      1 -total
+ 29.99%   15.059     26 Template:PropertyData
+ 20.47%   10.278     26 Template:Variable
+ 16.13%    8.102      1 Template:GuiCommand/fr
+ 11.64%    5.844     24 Template:Value
+  9.03%    4.534      3 Template:TitleProperty
+  6.23%    3.130     46 Template:Incode
+  6.23%    3.130      2 Template:Code
+  5.60%    2.812      6 Template:KEY
+  4.85%    2.436      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374436-0!canonical and timestamp 20260118194742 and revision id 1740807. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374436-0!canonical and timestamp 20260122111826 and revision id 1742301. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
