--- a/wiki/fr/Cables_CableBox.html
+++ b/wiki/fr/Cables_CableBox.html
@@ -128,13 +128,11 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Width</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la largeur int&eacute;rieure du bo&icirc;tier. La largeur par d&eacute;faut est de 74 mm. Disponible si la propri&eacute;t&eacute; <b>Profile Type</b> = <code>Rectangle</code>.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box Helpers</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Helper Rings Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la valeur est <code>false</code>, les anneaux d'aide sont visibles. La valeur par d&eacute;faut est <code>true</code>. Les anneaux d'aide sont con&ccedil;us pour faciliter l'&eacute;dition des c&acirc;bles &agrave; l'int&eacute;rieur d'une bo&icirc;te. Les sommets des anneaux d'aide peuvent servir de points d'attache pour les c&acirc;bles secondaires de c&acirc;bles lorsque ces derniers sont en mode <a href="../fr/Cables_Edit.html" title="Cables Edit/fr">Cables &Eacute;diter</a>. Cette propri&eacute;t&eacute; peut &ecirc;tre mise &agrave; <code>true</code> lorsque l'&eacute;dition des c&acirc;bles est termin&eacute;e ou n'est pas n&eacute;cessaire.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Helper Rings Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la valeur est <code>FALSE</code>, les anneaux d'aide sont visibles. La valeur par d&eacute;faut est <code>TRUE</code>. Les anneaux d'aide sont con&ccedil;us pour faciliter l'&eacute;dition des c&acirc;bles &agrave; l'int&eacute;rieur d'une bo&icirc;te. Les sommets des anneaux d'aide peuvent servir de points d'attache pour les c&acirc;bles secondaires de c&acirc;bles lorsque ces derniers sont en mode <a href="../fr/Cables_Edit.html" title="Cables Edit/fr">Cables &Eacute;diter</a>. Cette propri&eacute;t&eacute; peut &ecirc;tre mise &agrave; <code>TRUE</code> lorsque l'&eacute;dition des c&acirc;bles est termin&eacute;e ou n'est pas n&eacute;cessaire.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Ring 1 Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: le diam&egrave;tre de l'anneau auxiliaire 1. La valeur par d&eacute;faut est de 45 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Ring 1 Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: hauteur de l'anneau d'aide 1 sous le couvercle de la bo&icirc;te (bord sup&eacute;rieur ouvert de la bo&icirc;te). La valeur par d&eacute;faut est de 40 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Ring 2 Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: le diam&egrave;tre de l'anneau d'aide 2. La valeur par d&eacute;faut est de 30 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Ring 2 Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: hauteur de l'anneau d'aide 2 sous le couvercle de la bo&icirc;te (bord sup&eacute;rieur ouvert de la bo&icirc;te). La valeur par d&eacute;faut est de 20 mm.</li></ul>
-</div>
 <p><span id="Typical_workflow"></span>
 </p>
 <h2><span class="mw-headline" id="Flux_de_travail_typique">Flux de travail typique</span></h2>
@@ -169,13 +167,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260122111826
+Cached time: 20260122111857
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.145 seconds
-Preprocessor visited node count: 1654/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 1653/1000000
 Post&#8208;expand include size: 21761/2097152 bytes
 Template argument size: 4932/2097152 bytes
 Highest expansion depth: 7/100
@@ -185,19 +183,19 @@ Unstrip post&#8208;expand size: 1360/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.219      1 -total
- 29.99%   15.059     26 Template:PropertyData
- 20.47%   10.278     26 Template:Variable
- 16.13%    8.102      1 Template:GuiCommand/fr
- 11.64%    5.844     24 Template:Value
-  9.03%    4.534      3 Template:TitleProperty
-  6.23%    3.130     46 Template:Incode
-  6.23%    3.130      2 Template:Code
-  5.60%    2.812      6 Template:KEY
-  4.85%    2.436      2 Template:Docnav/fr
+100.00%   53.794      1 -total
+ 28.93%   15.561     26 Template:PropertyData
+ 21.06%   11.329     26 Template:Variable
+ 11.87%    6.384      1 Template:GuiCommand/fr
+  9.99%    5.375      3 Template:Caption
+  9.92%    5.337     24 Template:Value
+  7.48%    4.025      3 Template:TitleProperty
+  6.85%    3.687      2 Template:Docnav/fr
+  6.31%    3.392     46 Template:Incode
+  4.92%    2.648      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374436-0!canonical and timestamp 20260122111826 and revision id 1742301. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374436-0!canonical and timestamp 20260122111857 and revision id 1742303. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
