--- a/wiki/fr/File_Format_FCStd.html
+++ b/wiki/fr/File_Format_FCStd.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">File Format FCStd/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-File+Format+FCStd&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Dateiformat FCStd (92% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Dateiformat FCStd (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../File_Format_FCStd.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="File Format FCStd (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato dei file FCStd (92% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Format pliku FCStd (92% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Format pliku FCStd (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato do arquivo FCStd (92% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="Formatul fi&#537;ierului FCStd (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -152,10 +152,8 @@
 <p><span id="Embedding_other_files"></span>
 </p>
 <h2><span id="Incorporation_d.27autres_fichiers"></span><span class="mw-headline" id="Incorporation_d'autres_fichiers">Incorporation d'autres fichiers</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Pour incorporer d'autres types de fichiers dans un fichier FCStd, vous devez d'abord cr&eacute;er un <a href="../fr/Scripted_objects.html" title="Scripted objects/fr">objet script&eacute;</a> &agrave; partir de la <a href="../fr/Python_console.html" class="mw-redirect" title="Python console/fr">console Python</a> et lui donner une propri&eacute;t&eacute; <code>App::PropertyFileIncluded</code>.
+<p>Pour incorporer d'autres types de fichiers dans un fichier FCStd, vous devez d'abord cr&eacute;er un <a href="../fr/Scripted_objects.html" title="Scripted objects/fr">objet script&eacute;</a> &agrave; partir de la <a href="../fr/Python_Console.html" title="Python Console/fr">console Python</a> et lui donner une propri&eacute;t&eacute; <code>App::PropertyFileIncluded</code>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Ensuite, dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, vous pouvez acc&eacute;der &agrave; la propri&eacute;t&eacute; ajout&eacute;e et choisir un fichier sur l'ordinateur. Une fois le fichier FCStd enregistr&eacute;, le fichier affect&eacute; &agrave; la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b> sera mis dans le <code>.FCStd</code>. Lorsque le document est restaur&eacute;, le m&ecirc;me fichier sera restaur&eacute; avec la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b>.
 </p>
@@ -187,35 +185,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160302
+Cached time: 20260122112045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.130 seconds
-Preprocessor visited node count: 347/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 8350/2097152 bytes
 Template argument size: 5957/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20655/5000000 bytes
+Unstrip post&#8208;expand size: 20665/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.421      1 -total
- 23.89%    6.073      1 Template:Userdocnavi/fr
- 19.87%    5.052      2 Template:PropertyData/fr
- 13.28%    3.376      1 Template:Navigation_menu_2
- 10.87%    2.764      2 Template:Code
- 10.76%    2.736      1 Template:TOCright
- 10.31%    2.620     16 Template:FileName
-  8.79%    2.234      2 Template:Incode
-  8.49%    2.157      1 Template:Clear
-  8.38%    2.129      2 Template:Variable
+100.00%   28.168      1 -total
+ 27.14%    7.646      1 Template:Userdocnavi/fr
+ 20.35%    5.732      2 Template:PropertyData/fr
+ 14.43%    4.064      2 Template:Code
+ 13.12%    3.697      1 Template:Navigation_menu_2
+  8.96%    2.525     16 Template:FileName
+  8.92%    2.512      2 Template:Variable
+  8.01%    2.255      1 Template:Clear
+  7.47%    2.104      1 Template:TOCright
+  6.95%    1.958      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2597-0!canonical and timestamp 20260121160301 and revision id 1741935. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2597-0!canonical and timestamp 20260122112045 and revision id 1742307. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
