--- a/wiki/fr/File_Format_FCStd.html
+++ b/wiki/fr/File_Format_FCStd.html
@@ -3,7 +3,7 @@
 <li><a href="../de/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Dateiformat FCStd (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../File_Format_FCStd.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="File Format FCStd (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato dei file FCStd (92% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Format pliku FCStd (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -153,11 +153,8 @@
 </p>
 <h2><span id="Incorporation_d.27autres_fichiers"></span><span class="mw-headline" id="Incorporation_d'autres_fichiers">Incorporation d'autres fichiers</span></h2>
 <p>Pour incorporer d'autres types de fichiers dans un fichier FCStd, vous devez d'abord cr&eacute;er un <a href="../fr/Scripted_objects.html" title="Scripted objects/fr">objet script&eacute;</a> &agrave; partir de la <a href="../fr/Python_Console.html" title="Python Console/fr">console Python</a> et lui donner une propri&eacute;t&eacute; <code>App::PropertyFileIncluded</code>.
+</p><p>Ensuite, dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, vous pouvez acc&eacute;der &agrave; la propri&eacute;t&eacute; ajout&eacute;e et choisir un fichier sur l'ordinateur. Une fois le fichier FCStd enregistr&eacute;, le fichier affect&eacute; &agrave; la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b> sera mis dans le <code>.FCStd</code>. Lorsque le document est restaur&eacute;, le m&ecirc;me fichier sera restaur&eacute; avec la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b>.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Ensuite, dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, vous pouvez acc&eacute;der &agrave; la propri&eacute;t&eacute; ajout&eacute;e et choisir un fichier sur l'ordinateur. Une fois le fichier FCStd enregistr&eacute;, le fichier affect&eacute; &agrave; la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b> sera mis dans le <code>.FCStd</code>. Lorsque le document est restaur&eacute;, le m&ecirc;me fichier sera restaur&eacute; avec la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>PropertyFileIncluded</b>.
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">custom_obj</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"CustomObject"</span><span class="p">)</span>
 <span class="n">custom_obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyFileIncluded"</span><span class="p">,</span> <span class="s2">"AttachedFile"</span><span class="p">)</span>
 </pre></div>
@@ -185,35 +182,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112045
+Cached time: 20260122112117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.123 seconds
-Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 8350/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.139 seconds
+Preprocessor visited node count: 359/1000000
+Post&#8208;expand include size: 8372/2097152 bytes
 Template argument size: 5957/2097152 bytes
-Highest expansion depth: 8/100
+Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20665/5000000 bytes
+Unstrip post&#8208;expand size: 20669/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.168      1 -total
- 27.14%    7.646      1 Template:Userdocnavi/fr
- 20.35%    5.732      2 Template:PropertyData/fr
- 14.43%    4.064      2 Template:Code
- 13.12%    3.697      1 Template:Navigation_menu_2
-  8.96%    2.525     16 Template:FileName
-  8.92%    2.512      2 Template:Variable
-  8.01%    2.255      1 Template:Clear
-  7.47%    2.104      1 Template:TOCright
-  6.95%    1.958      2 Template:Incode
+100.00%   33.470      1 -total
+ 26.06%    8.722      1 Template:Userdocnavi/fr
+ 18.24%    6.106      2 Template:PropertyData
+ 12.20%    4.083      1 Template:Navigation_menu_2
+ 12.18%    4.076      2 Template:Incode
+ 12.02%    4.022      2 Template:Code
+  9.93%    3.323      2 Template:Variable
+  9.69%    3.243     16 Template:FileName
+  7.84%    2.623      1 Template:Clear
+  7.34%    2.457      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2597-0!canonical and timestamp 20260122112045 and revision id 1742307. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2597-0!canonical and timestamp 20260122112117 and revision id 1742309. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
