--- a/wiki/fr/Scripted_objects.html
+++ b/wiki/fr/Scripted_objects.html
@@ -1,12 +1,12 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Scripted objects/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Scripted+objects&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Skriptgenerierte Objekte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Skriptgenerierte Objekte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Scripted_objects.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Scripted objects (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (5% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Oggetti creati da script (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Obiekty tworzone skryptami (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Obiekty tworzone skryptami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Objetos com Script (3% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Obiecte create prin script-programare (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1000,11 +1000,8 @@
 <p><span id="Available_extensions"></span>
 </p>
 <h2><span class="mw-headline" id="Extensions_disponibles">Extensions disponibles</span></h2>
-<div class="mw-translate-fuzzy">
-<p>La liste des extensions disponibles peut &ecirc;tre obtenue avec <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> dans le d&eacute;p&ocirc;t du code source et est donn&eacute;e ici (pour FreeCAD v0.21).
-</p>
-</div>
-<p>Pour des objets&nbsp;:
+<p>La liste des extensions disponibles peut &ecirc;tre obtenue avec <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> dans le d&eacute;p&ocirc;t du code source et est donn&eacute;e ici (pour FreeCAD v1.1).
+</p><p>Pour des objets&nbsp;:
 </p>
 <ul><li><code>App::GeoFeatureGroupExtensionPython</code></li>
 <li><code>App::GroupExtensionPython</code></li>
@@ -1079,33 +1076,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121205639
+Cached time: 20260122112226
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.227 seconds
-Real time usage: 0.666 seconds
-Preprocessor visited node count: 1150/1000000
+CPU time usage: 0.231 seconds
+Real time usage: 0.277 seconds
+Preprocessor visited node count: 1149/1000000
 Post&#8208;expand include size: 14088/2097152 bytes
 Template argument size: 33904/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 19/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 137516/5000000 bytes
+Unstrip post&#8208;expand size: 137530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.181      1 -total
- 30.87%   39.255     19 Template:Code
- 19.62%   24.953    119 Template:Incode
-  8.89%   11.312      1 Template:Powerdocnavi/fr
-  7.80%    9.914      2 Template:Docnav/fr
-  5.14%    6.533      1 Template:Navigation_menu_2
-  3.85%    4.902      1 Template:Version/fr
-  2.78%    3.539      1 Template:TOCright
+100.00%   30.206      1 -total
+ 25.25%    7.626     19 Template:Code
+ 16.89%    5.102      1 Template:Powerdocnavi/fr
+ 16.39%    4.952    119 Template:Incode
+  8.24%    2.489      2 Template:Docnav/fr
+  7.21%    2.179      1 Template:Navigation_menu_2
+  6.28%    1.896      1 Template:TOCright
+  5.50%    1.661      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2430-0!canonical and timestamp 20260121205638 and revision id 1742070. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2430-0!canonical and timestamp 20260122112226 and revision id 1742311. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
