--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -1,17 +1,14 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Package Metadata (87% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (17% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Metadane pakietu (87% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Metadane pakietu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (36% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
-<div class="mw-translate-fuzzy">
-<p>&Agrave; partir de la version 0.20 de FreeCAD, les extensions externes (ateliers, macros, et kits de pr&eacute;f&eacute;rences, bundles <sup><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></sup>, et &laquo;&nbsp;autres&nbsp;&raquo; collections g&eacute;n&eacute;riques d'outils <sup><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></sup>) peuvent &ecirc;tre distribu&eacute;s avec un fichier de m&eacute;tadonn&eacute;es d&eacute;crivant le contenu du package. Si le fichier "package.xml" est pr&eacute;sent, il est lu par FreeCAD et son contenu est utilis&eacute; dans diverses parties de l'interface utilisateur. Il est pour l'instant facultatif pour les ateliers et les macros, et obligatoire pour les kits de pr&eacute;f&eacute;rences. Cette page documente le format de ce fichier de m&eacute;tadonn&eacute;es. Le format (et le contenu de cette page Wiki) est bas&eacute; sur <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
-</p>
-</div>
-<p><span id="Overall_file_format"></span>
+<p>&Agrave; partir de FreeCAD v0.20, les extensions doivent &ecirc;tre distribu&eacute;es avec un fichier manifeste d&eacute;crivant leur contenu. FreeCAD utilise ces m&eacute;tadonn&eacute;es pour d&eacute;terminer les ressources &agrave; charger et les d&eacute;pendances &agrave; installer par rapport &agrave; d'autres &eacute;l&eacute;ments. Le fichier fournit &eacute;galement des informations utilis&eacute;es pour afficher votre extension dans le gestionnaire des extensions.
+</p><p><span id="Overall_file_format"></span>
 </p>
 <h2><span id="Format_g.C3.A9n.C3.A9ral_du_fichier"></span><span class="mw-headline" id="Format_g&eacute;n&eacute;ral_du_fichier">Format g&eacute;n&eacute;ral du fichier</span></h2>
 <p>Ce document d&eacute;crit actuellement la version 1 du format de fichier.
@@ -404,34 +401,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155836
+Cached time: 20260122112615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 541/1000000
-Post&#8208;expand include size: 8087/2097152 bytes
-Template argument size: 2887/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.097 seconds
+Preprocessor visited node count: 526/1000000
+Post&#8208;expand include size: 7957/2097152 bytes
+Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8512/5000000 bytes
+Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.986      1 -total
- 26.75%    7.220      1 Template:Powerdocnavi/fr
- 17.41%    4.698      2 Template:VersionNote/fr
- 12.41%    3.348     37 Template:Incode
- 11.74%    3.169      1 Template:Navigation_menu_2
- 10.11%    2.729      3 Template:Version/fr
-  6.93%    1.869      1 Template:TOCright
-  6.04%    1.630      1 Template:Code
-  5.33%    1.438      1 Template:MenuCommand
+100.00%   23.605      1 -total
+ 26.29%    6.206      1 Template:Powerdocnavi/fr
+ 15.21%    3.590     37 Template:Incode
+ 13.24%    3.126      1 Template:Navigation_menu_2
+ 12.46%    2.941      1 Template:Code
+ 11.10%    2.621      1 Template:MenuCommand
+  9.97%    2.354      3 Template:Version/fr
+  9.30%    2.196      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260121155836 and revision id 1741918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112615 and revision id 1742315. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
