--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -12,7 +12,7 @@
 </p>
 <h2><span id="Format_g.C3.A9n.C3.A9ral_du_fichier"></span><span class="mw-headline" id="Format_g&eacute;n&eacute;ral_du_fichier">Format g&eacute;n&eacute;ral du fichier</span></h2>
 <p>Ce document d&eacute;crit actuellement la version 1 du format de fichier.
-</p><p>The original format and contents of this page were based on <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
+</p><p>Le format et le contenu originaux de cette page &eacute;taient bas&eacute;s sur <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
 </p><p>Le fichier de m&eacute;tadonn&eacute;es doit &ecirc;tre un document XML 1.0 valide et bien form&eacute;. Il doit &ecirc;tre nomm&eacute; &laquo;&nbsp;package.xml&nbsp;&raquo; et doit se trouver dans le r&eacute;pertoire de base de chacune des branches affich&eacute;es du paquet logiciel (comme sp&eacute;cifi&eacute; par le <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/blob/master/AddonCatalog.json">fichier FreeCAD-addons AddonCatalog.json</a>) dans son d&eacute;p&ocirc;t git. Chaque branche doit contenir un fichier package.xml ind&eacute;pendant qui se rapporte sp&eacute;cifiquement &agrave; cette branche (par exemple, une branche &laquo;&nbsp;d&eacute;veloppement&nbsp;&raquo; doit sp&eacute;cifier un num&eacute;ro de version qui indique clairement qu'il s'agit d'une branche de d&eacute;veloppement, etc). Toutes les balises XML reconnues sont en minuscules, mais les balises non reconnues ne constituent <b>pas</b> une erreur. La plupart des balises sont facultatives, et certaines ne s'appliquent qu'&agrave; certains types de contenu de paquet (par exemple, seuls les Workbenches fournissent actuellement un &eacute;l&eacute;ment &laquo;&nbsp;classname&nbsp;&raquo;). Les &eacute;l&eacute;ments inutiles ou non reconnus sont ignor&eacute;s.
 </p><p>Tout chemin de fichier sp&eacute;cifi&eacute; dans package.xml doit utiliser la barre oblique ("/") comme s&eacute;parateur de r&eacute;pertoire&nbsp;: sur les syst&egrave;mes qui attendent un s&eacute;parateur diff&eacute;rent pendant l'ex&eacute;cution (par exemple Windows), FreeCAD convertira automatiquement vers le s&eacute;parateur correct.
 </p><p><span id="Tags"></span>
@@ -401,12 +401,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112615
+Cached time: 20260122112633
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.067 seconds
+Real time usage: 0.127 seconds
 Preprocessor visited node count: 526/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
@@ -417,17 +417,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.605      1 -total
- 26.29%    6.206      1 Template:Powerdocnavi/fr
- 15.21%    3.590     37 Template:Incode
- 13.24%    3.126      1 Template:Navigation_menu_2
- 12.46%    2.941      1 Template:Code
- 11.10%    2.621      1 Template:MenuCommand
-  9.97%    2.354      3 Template:Version/fr
-  9.30%    2.196      1 Template:TOCright
+100.00%   45.192      1 -total
+ 27.23%   12.305      1 Template:Powerdocnavi/fr
+ 15.09%    6.817     37 Template:Incode
+ 13.27%    5.998      1 Template:MenuCommand
+ 11.80%    5.332      1 Template:TOCright
+ 11.47%    5.185      1 Template:Code
+ 10.30%    4.654      1 Template:Navigation_menu_2
+  7.93%    3.583      3 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112615 and revision id 1742315. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112633 and revision id 1742317. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
