Updated page Package Metadata/fr

--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -21,10 +21,8 @@
 <h2><span id=".C3.89l.C3.A9ments_de_contenu"></span><span class="mw-headline" id="&Eacute;l&eacute;ments_de_contenu">&Eacute;l&eacute;ments de contenu</span></h2>
 </div>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Le seul &eacute;l&eacute;ment de haut niveau autoris&eacute; est &lt;package&gt;, et le fichier ne peut contenir qu'un seul &eacute;l&eacute;ment &lt;package&gt;. Imm&eacute;diatement subordonn&eacute;s &agrave; celui-ci se trouvent plusieurs &eacute;l&eacute;ments obligatoires ou facultatifs, d&eacute;finis ici. Aucune autre balise n'est autoris&eacute;e directement sous l'&eacute;l&eacute;ment &lt;package&gt;.
+<p>La balise &lt;package&gt; est le seul &eacute;l&eacute;ment de niveau sup&eacute;rieur autoris&eacute; dans le manifeste et il ne peut y en avoir qu'une seule. Toutes les autres balises et leur contenu sont imbriqu&eacute;s &agrave; l'int&eacute;rieur.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-xml mw-content-ltr" dir="ltr"><pre><span></span><span class="nt">&lt;package</span><span class="w"> </span>
 <span class="w">    </span><span class="na">format=</span><span class="s">"1"</span>
 <span class="w">    </span><span class="na">xmlns=</span><span class="s">"https://wiki.freecad.org/Package_Metadata"</span>
@@ -401,13 +399,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112633
+Cached time: 20260122112734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.127 seconds
-Preprocessor visited node count: 526/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.099 seconds
+Preprocessor visited node count: 525/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -417,17 +415,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.192      1 -total
- 27.23%   12.305      1 Template:Powerdocnavi/fr
- 15.09%    6.817     37 Template:Incode
- 13.27%    5.998      1 Template:MenuCommand
- 11.80%    5.332      1 Template:TOCright
- 11.47%    5.185      1 Template:Code
- 10.30%    4.654      1 Template:Navigation_menu_2
-  7.93%    3.583      3 Template:Version/fr
+100.00%   22.303      1 -total
+ 24.42%    5.446      1 Template:Powerdocnavi/fr
+ 13.86%    3.091     37 Template:Incode
+ 12.41%    2.767      1 Template:Code
+ 11.88%    2.650      3 Template:Version/fr
+ 11.75%    2.620      1 Template:Navigation_menu_2
+ 11.61%    2.590      1 Template:TOCright
+  9.59%    2.140      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112633 and revision id 1742317. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112734 and revision id 1742319. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
