Updated page Package Metadata/fr

--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -17,9 +17,7 @@
 </p><p>Tout chemin de fichier sp&eacute;cifi&eacute; dans package.xml doit utiliser la barre oblique ("/") comme s&eacute;parateur de r&eacute;pertoire&nbsp;: sur les syst&egrave;mes qui attendent un s&eacute;parateur diff&eacute;rent pendant l'ex&eacute;cution (par exemple Windows), FreeCAD convertira automatiquement vers le s&eacute;parateur correct.
 </p><p><span id="Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id=".C3.89l.C3.A9ments_de_contenu"></span><span class="mw-headline" id="&Eacute;l&eacute;ments_de_contenu">&Eacute;l&eacute;ments de contenu</span></h2>
-</div>
+<h2><span class="mw-headline" id="Balises">Balises</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
 <p>La balise &lt;package&gt; est le seul &eacute;l&eacute;ment de niveau sup&eacute;rieur autoris&eacute; dans le manifeste et il ne peut y en avoir qu'une seule. Toutes les autres balises et leur contenu sont imbriqu&eacute;s &agrave; l'int&eacute;rieur.
 </p>
@@ -399,13 +397,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112734
+Cached time: 20260122112751
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.099 seconds
-Preprocessor visited node count: 525/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 524/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -415,17 +413,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.303      1 -total
- 24.42%    5.446      1 Template:Powerdocnavi/fr
- 13.86%    3.091     37 Template:Incode
- 12.41%    2.767      1 Template:Code
- 11.88%    2.650      3 Template:Version/fr
- 11.75%    2.620      1 Template:Navigation_menu_2
- 11.61%    2.590      1 Template:TOCright
-  9.59%    2.140      1 Template:MenuCommand
+100.00%   27.372      1 -total
+ 23.42%    6.410      1 Template:Powerdocnavi/fr
+ 18.50%    5.065      3 Template:Version/fr
+ 14.08%    3.854     37 Template:Incode
+ 10.26%    2.809      1 Template:Code
+  9.04%    2.475      1 Template:TOCright
+  8.79%    2.407      1 Template:MenuCommand
+  8.68%    2.377      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112734 and revision id 1742319. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112751 and revision id 1742321. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
