--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -29,10 +29,8 @@
 <p><span id="Attributes"></span>
 </p>
 <h4><span class="mw-headline" id="Attributs">Attributs</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li>format="NUMERO"&nbsp;: Sp&eacute;cifier le format package.xml utilis&eacute;. Pour cette interface, vous devez sp&eacute;cifier format="1".</li>
-<li>xmlns="NAMESPACE"&nbsp;: Sp&eacute;cifie l'espace de noms XML pour ce paquet, et doit &ecirc;tre inclus exactement comme indiqu&eacute; ci-dessus, comme un lien vers <a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>.</li></ul>
-</div>
+<ul><li>format="NUMBER"&nbsp;: sp&eacute;cifie la version du format utilis&eacute;. Actuellement, seule la version &laquo;&nbsp;1&nbsp;&raquo; existe.</li>
+<li>xmlns="NAMESPACE"&nbsp;: sp&eacute;cifie l'espace de noms XML utilis&eacute;. Doit &ecirc;tre d&eacute;fini sur &laquo;&nbsp;<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>&nbsp;&raquo;.</li></ul>
 <p><span id="Required_Tags"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -397,13 +395,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112751
+Cached time: 20260122112834
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 524/1000000
+CPU time usage: 0.060 seconds
+Real time usage: 0.081 seconds
+Preprocessor visited node count: 523/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -413,17 +411,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.372      1 -total
- 23.42%    6.410      1 Template:Powerdocnavi/fr
- 18.50%    5.065      3 Template:Version/fr
- 14.08%    3.854     37 Template:Incode
- 10.26%    2.809      1 Template:Code
-  9.04%    2.475      1 Template:TOCright
-  8.79%    2.407      1 Template:MenuCommand
-  8.68%    2.377      1 Template:Navigation_menu_2
+100.00%   17.225      1 -total
+ 28.77%    4.956      1 Template:Powerdocnavi/fr
+ 13.83%    2.382     37 Template:Incode
+ 13.60%    2.342      1 Template:Navigation_menu_2
+ 12.66%    2.181      3 Template:Version/fr
+ 12.01%    2.068      1 Template:Code
+  8.73%    1.503      1 Template:TOCright
+  7.41%    1.277      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112751 and revision id 1742321. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112834 and revision id 1742323. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
